[package]
name = "downloader_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
youtube_dl = { version="0.9.0", features = ["tokio", "downloader-native-tls"] }
